Bug 1477742 - Remove dubious pointer computation optimization, r=jandem